Please view this file on the master branch, on stable branches it's out of date.

V 0.5.0 * TBD
* Updated rails to 5.1 and ruby to 2.4.2 (jvanbaarsen)
* Fix typo bug in production.rb preventing the app to start (jvanbaarsen)
* Add Docker Compose setup for local development (michiels)
* Make sure we run certain commands as sudo (jvanbaarsen)
* Update standard Dokku version to 0.12.13

V 0.4.0 * 2017-12-01
* When no Dokku installed, make sure version check is not breaking. Fixes #229 (jvanbaarsen)
* Upgrade Dokku to latest version (0.10.5) (jvanbaarsen)
* Upgrade Rubocop to latest version due to security problem (jvanbaarsen)

V 0.3.0 * 2017-01-27
* Allow execution user to be set for a server, defaults to root Fixes: #94 (jvanbaarsen)

V 0.2.0 * 2016-09-19
* Mark all existing services as linked (jvanbaarsen)
* Store the amount of resources a server has (jvanbaarsen)
* Update Dokku to 0.7.1 (jvanbaarsen)
* Ensure we give CURL enough time to download buildpacks (jvanbaarsen)

v 0.1.0 * 2016-09-02
* Move generation of SECRET_KEY_TOKEN to an initializer (jvanbaarsen)
* Brand new design (jvanbaarsen)
* Scope app name uniqueness to server and not entire IC (jvanbaarsen)
* Make sure service containers are destroyed when removing an app Fixes: #80 (jvanbaarsen)
* Schedule Health_checks in their own queue and run them in IC. (jvanbaarsen)
* Add ability to remove users from the IC (brambokdam)
* Add blank slate for server page (jvanbaarsen)
* Add Two Factor Authentication (jvanbaarsen)
* Add a LICENSE file (jvanbaarsen)
* Load gravatars over SSL (jvanbaarsen)
* Ensure Healthcheck page has proper styling (jvanbaarsen)
* Don't schedule backups when the server is marked as down (jvanbaarsen)
* Add pagination to the backups page (jvanbaarsen)
* Update to Dokku 0.7.0; Fixes: #158 (jvanbaarsen)
* Remove the empty state on different forms after adding first item; Fixes: #156 (jvanbaarsen)
* Added a settings page (jvanbaarsen)