@@ -7,16 +7,15 @@ gem "inline_svg", "~> 1.3.1"
 gem "jquery-rails"
 gem "jquery-turbolinks"
 gem "kaminari", "~> 0.17"
-gem "net-ssh", "3.0.1"
+gem "net-ssh", "~> 5.2.0"
 gem "pg", "~> 0.18"
 gem "puma", "~> 3.4"
 gem "rails", "5.1.6"
 gem "redcarpet"
-gem "redis", "~> 3.2.0"
 gem "rotp", "~> 3.0"
 gem "rqrcode", "~> 0.10"
 gem "sass-rails", "~> 5.0"
-gem "sidekiq", "~> 4.0"
+gem "sidekiq", "~> 5.2.7"
 gem "sidekiq-cron", "~> 0.4.0"
 gem "sinatra", "~> 2.0.0.beta2", require: nil
 gem "sorcery", "~> 0.9.1"
@@ -45,7 +44,7 @@ end
 group :development, :test do
   gem "awesome_print"
   gem "capybara"
-  gem "chromedriver-helper"
+  gem "webdrivers"
   gem "dotenv-rails", "2.2.1"
   gem "rubocop"
   gem "selenium-webdriver"
