@@ -23,26 +23,39 @@ class InstallServerJob < ApplicationJob
       "sudo echo 'dokku dokku/vhost_enable boolean false' | sudo debconf-set-selections && " \
       "sudo echo 'dokku dokku/hostname string intercity.dokku' | sudo debconf-set-selections && " \
       "sudo echo 'dokku dokku/skip_key_file boolean true' | sudo debconf-set-selections && " \
-      "wget https://raw.githubusercontent.com/dokku/dokku/#{server.latest_dokku_version}/bootstrap.sh && "\
+      "wget -O bootstrap.sh https://raw.githubusercontent.com/dokku/dokku/#{server.latest_dokku_version}/bootstrap.sh && "\
       "sudo DOKKU_TAG=#{server.latest_dokku_version} bash bootstrap.sh"
   end
 
   def perform_installation
     SshExecution.new(server).execute_with_block do |ssh|
-      ssh.open_channel do |channel|
-        channel.exec install_dokku
-        channel.on_data do |_, data|
-          if data =~ /Initial apt-get update/
-            server.update(install_step: 1)
-          elsif data =~ /Installing docker/
-            server.update(install_step: 2)
-          elsif data =~ /Installing dokku/
-            server.update(install_step: 3)
-          elsif data =~ /Importing herokuish into docker/
-            server.update(install_step: 4)
+      ch = ssh.open_channel do |channel|
+        logger.debug("Executing #{install_dokku}")
+        channel.exec install_dokku do |_, success|
+
+          channel.on_extended_data do |_, type, data|
+            # noop yet. will store this in log
+          end
+
+          channel.on_data do |_, data|
+            if data =~ /Initial apt-get update/
+              server.update(install_step: 1)
+            elsif data =~ /Installing docker/
+              server.update(install_step: 2)
+            elsif data =~ /Installing dokku/
+              server.update(install_step: 3)
+            elsif data =~ /Importing herokuish into docker/
+              server.update(install_step: 4)
+            end
+          end
+
+          channel.on_close do
+            logger.debug("Command finished")
           end
         end
       end
+
+      ch.wait
     end
   end
 end
