@@ -1,11 +1,14 @@
 Please view this file on the master branch, on stable branches it's out of date.
 
 V 0.5.0 * TBD
-* Updated rails to 5.1 and ruby to 2.4.2 (jvanbaarsen)
+* Updated Rails to 5.1 and ruby to 2.4.2 (jvanbaarsen)
 * Fix typo bug in production.rb preventing the app to start (jvanbaarsen)
 * Add Docker Compose setup for local development (michiels)
 * Make sure we run certain commands as sudo (jvanbaarsen)
-* Update standard Dokku version to 0.12.13
+* Update standard Dokku version to 0.15.15 (michiels)
+* Update net-ssh to fix an issue with command execution (michiels)
+* Update sidekiq to 5.x to make use of autoloading in Rails 5 (michiels)
+* Fix that output of SSH wasn't captured in server installer job (michiels)
 
 V 0.4.0 * 2017-12-01
 * When no Dokku installed, make sure version check is not breaking. Fixes #229 (jvanbaarsen)
